# ai-solution-prototypes

./: README.md
agentic/aws-agent-samples/: README.md  basic_agent.ipynb  converse_api.ipynb
agentic/local-multi-agent/: local_multi_agent.ipynb
agentic/nova-act/: README.md  apartments_caltrain.py  coffee_maker.py  order_salad.py
agentic/ollama-langgraph-local/: multi-agent.ipynb
ai4ai/ollama-qwen2.5/: .gitignore  AmazonQ_logs.md  COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  TRANSLATION_GUIDE_CN.md  TRANSLATION_IMPLEMENTATION.md  TRANSLATION_USAGE.md  app.py  diagnose.py  integration_test.py  requirements.txt  start.sh  test_components.py  test_e2e.py  test_translation.py
ai4ai/ollama-typingtutor/: .gitignore  AmazonQ_log.md  FINAL_UI_IMPROVEMENTS.md  PROJECT_COMPLETE.md  README.md  SOUND_FEATURE.md  UI_IMPROVEMENTS.md  start.sh  test_app.py
ai_100/: README.md
ai_image_recognization/: README.md  app.py
aws-bedrock/basic-api-call/: llama2.py  stablediffusion.py
aws-bedrock/bedrock-in-lambda/: README.md  lambda_function.py
aws-bedrock/bedrock-langchain-rag/: README.md  app.py  requirements.txt
beginner/: README.md
beginner/llm-guidance-prompt/: .env  (+9 more)
prototypes/: README.md
prototypes/mcp-local/: .gitignore  README.md  pyproject.toml  requirements.txt  test_smoke.py
prototypes/mcp-local/data/: sales_sample.csv
prototypes/mcp-local/src/data_analysis_mcp/: __init__.py  server.py
prototypes/mcp-local/src/data_analysis_mcp/tools/: analysis.py  data_loader.py  visualization.py
prototypes/mcp-local/src/data_analysis_mcp/utils/: helpers.py
(+68 files in other folders)
