[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-mcp"
version = "0.1.0"
description = "A local MCP server for data analysis on macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
data-analysis-mcp = "data_analysis_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
